// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl Picker__InputContainer-sc-1xwpkqn-0 VCXxY"
    id="toggleSelect"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gPLKjZ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
      onClick={null}
    >
      Standard Swatches
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 jnvzyh"
        color="#E4423A"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 iPAWtF"
        color="#14A939"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 fgZuKn"
        color="#2F98EE"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl Picker__InputContainer-sc-1xwpkqn-0 VCXxY"
  id="standard"
  rows={null}
>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 gPLKjZ"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
    onClick={null}
  >
    Color Picker
  </label>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 NRgbL"
    id={null}
    rows={null}
  >
    <button
      className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
      color="#EBEAEC"
      height="1.5rem"
      onClick={null}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
      color="#D9ECEC"
      height="1.5rem"
      onClick={null}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
      color="#63B1CD"
      height="1.5rem"
      onClick={null}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
      color="#06BFAE"
      height="1.5rem"
      onClick={null}
      width="1.5rem"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
        color={null}
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
    <button
      className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
      color="#095593"
      height="1.5rem"
      onClick={null}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
      color="#F3822B"
      height="1.5rem"
      onClick={null}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-1 jdqheZ"
      color="#FFBF00"
      height="1.5rem"
      onClick={null}
      width="1.5rem"
    />
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl Picker__InputContainer-sc-1xwpkqn-0 VCXxY"
    id="standard"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gPLKjZ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
      onClick={null}
    >
      Color Picker
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 NRgbL"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
        color="#EBEAEC"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
        color="#D9ECEC"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
        color="#63B1CD"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
        color="#06BFAE"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="check"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
        color="#095593"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 cQvxVu"
        color="#F3822B"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 jdqheZ"
        color="#FFBF00"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl Picker__InputContainer-sc-1xwpkqn-0 VCXxY"
    id="standard"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gPLKjZ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
      onClick={null}
    >
      Color Picker
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 NRgbL"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 lgzKyy"
        color="#EBEAEC"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 lgzKyy"
        color="#D9ECEC"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 lgzKyy"
        color="#63B1CD"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 lgzKyy"
        color="#06BFAE"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="check"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 lgzKyy"
        color="#095593"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 lgzKyy"
        color="#F3822B"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 eCKZcd"
        color="#FFBF00"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
    </section>
  </section>
</section>
`;
